Dark mode: color fix

--- a/web-src/src/mystyles.scss
+++ b/web-src/src/mystyles.scss
@@ -2494,3 +2494,7 @@ p.title.is-4 > .has-text-link {
 a.navbar-item > b {
   color: var(--color-26);
 }
+
+.has-text-primary {
+  color: var(--color-65) !important;
+}
